@@ -11,3 +11,4 @@ Gave bloodymancer +15% blood magic resistance/piece to match blazymancer
 Sanguine Scepter also inflicts bleeding when held in offhand
 Summon Weakness spel is now obtainable
 Summoned Weakness Health & damage now scales with spell power
+New spell - Summon Pyro Knight. Hp & duration scales with spell power
